[package]
name = "filelocksmith"
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["Caelan Sayler <git@caesay.com>"]
description = "Detect what processes are locking a file or folder on Windows"
readme = "README.md"
homepage = "https://github.com/velopack/filelocksmith-rs"
repository = "https://github.com/velopack/filelocksmith-rs"
documentation = "https://docs.rs/filelocksmith"
keywords = ["windows", "locksmith", "powertoys", "find", "locking"]
categories = ["development-tools"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[lib]
name = "filelocksmith"
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_LibraryLoader",
] }

[[test]]
name = "ci_test"
harness = false
